infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dokanx
  labels:
    name: dokanx
    app: dokanx-platform
